Change Development to Services in nav header

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <ul class="nav navbar-nav navbar-right main-navigation" id="nav-ul">
                     <li><a href="#home" class="smoothScroll">Home</a></li>
                     <li><a href="#overview" class="smoothScroll">About</a></li>
-                    <li><a href="#dev" class="smoothScroll">Development</a></li>
+                    <li><a href="#dev" class="smoothScroll">Services</a></li>
                     <li><a href="#testimonial" class="smoothScroll">Testimonials</a></li>
                     <li><a href="#book-me" class="smoothScroll">Book Me</a></li>
                 </ul>
